--- a/platformio.ini
+++ b/platformio.ini
@@ -13,10 +13,8 @@ platform = espressif32
 board = esp-wrover-kit
 framework = arduino
 monitor_speed = 9600
-;debug_tool = esp-prog
-;upload_protocol = esp-prog
-;debug_init_break = tbreak setup
 lib_deps = 
 	azure/Azure SDK for C@^1.1.6
 	esphome/AsyncTCP-esphome@^2.1.3
 	esphome/ESPAsyncWebServer-esphome@^3.2.2
+	bblanchon/ArduinoJson@^7.0.4
