add_lote_bgfix_fw

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,9 @@ platform = espressif32
 board = esp-wrover-kit
 framework = arduino
 monitor_speed = 9600
+;debug_tool = esp-prog
+;upload_protocol = esp-prog
+;debug_init_break = tbreak setup
 lib_deps = 
 	azure/Azure SDK for C@^1.1.6
 	esphome/AsyncTCP-esphome@^2.1.3
