--- a/platformio.ini
+++ b/platformio.ini
@@ -8,14 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp-wrover-kit]
+[env:esp32dev]
 platform = espressif32
-board = esp-wrover-kit
+board = esp32dev
 framework = arduino
-monitor_speed = 9600
-;debug_tool = esp-prog
-;upload_protocol = esp-prog
-;debug_init_break = tbreak setup
+monitor_speed = 115200
 lib_deps = 
 	azure/Azure SDK for C@^1.1.6
 	esphome/AsyncTCP-esphome@^2.1.3
